crates/strider-analyze/tests/snapshots/v3__ppc32be__floats__float_to_int.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="FloatToInt\nf64 → u32", shape=box, fillcolor="#302018"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "5" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "18" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "16" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
}
